# agent-battle-command-center

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MVP_ASSESSMENT.md  README.md  SECURITY.md  docker-compose.mac.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.battleclaw/: README.md
docs/: MCP_INTEGRATION_STATUS.md  MVP_ASSESSMENT.md
modelfiles/: qwen2.5-coder-64k.Modelfile
python/agents/: coder.py  orchestrator.py
python/tools/: code_validation.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/agents/: mod.rs
rust/src/broker/: mod.rs
rust/src/db/: mod.rs
rust/src/state/: mod.rs
rust/src/tui/: mod.rs
scripts/: mac-preflight.js  ollama-entrypoint-mac.sh  ollama-stress-test-php.js  ollama-stress-test-qwen3-8b.js  qa-stress-test.js  setup-mac.sh  test-remote-mission.js  verify-system.js
